# CMakeDemo

./: .cquery  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/src/: hello.cpp
example2/: CMakeLists.txt
example2/src/: hello.cpp
lib/: CMakeLists.txt
lib/inc/enity/: Man.h
lib/src/: Man.cpp
